--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.0.9.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
